--- a/example/package.json
+++ b/example/package.json
@@ -8,6 +8,8 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
+    "@apollo/client": "^3.0.0-beta.43",
+    "graphql": "^15.0.0",
     "react-app-polyfill": "^1.0.0"
   },
   "alias": {
